--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,10 +2,18 @@ html, body {
 	font-family: "Arial";
 }
 
+html {
+	height: 100%;
+}
+
 body, main {
 	display: flex;
 	flex-direction: column;
 	overflow-x: hidden;
+}
+
+main {
+	overflow: hidden;
 }
 
 * {
