--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   background-color: $footer__background;
   color: $footer__color;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 footer a {
