--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,7 +10,7 @@ header {
 	display: none;
 }
 
-.header__container {
+.header__navs {
 	display: flex;
 	justify-content: space-between;
 }
