--- a/sass/sections/_all-bikes.scss
+++ b/sass/sections/_all-bikes.scss
@@ -20,6 +20,7 @@
 .all-bikes__legend {
   text-align: center;
   padding-top: 2px;
+  padding-bottom: 30px;
 }
 
 .all-bikes__legend--btn {
